--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ authors = ["Zoran Lazarevic <lazarevic.zoki91@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-image = "0.23.8"
+image = { version = "0.23.8", features = ["png"] }
+rayon = "1.3.1"
